// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filled 1`] = `
<div
  className=""
>
  <div
    className="input__union"
  >
    <input
      className="input"
      id="ejemplo2"
      name="ejemplo2"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      value="filled"
    />
  </div>
</div>
`;

exports[`Focus 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="input__union"
    >
      <input
        class="input"
        data-testid="ejemplo"
        id="hi"
        name="hi"
      />
    </div>
  </div>
</div>
`;

exports[`label=Email: * 1`] = `
<div
  className=""
>
  <label
    className=""
    htmlFor="ejemplo3"
  >
    Email: *
  </label>
  <div
    className="input__union"
  >
    <input
      className="input"
      id="ejemplo3"
      name="ejemplo3"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    />
  </div>
</div>
`;

exports[`normal 1`] = `
<div
  className=""
>
  <div
    className="input__union"
  >
    <input
      className="input"
      id="ejemplo"
      name="ejemplo"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
    />
  </div>
</div>
`;
